--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
                     <div class="rank-sec">
                         <div class="num">1</div>
                         <label for="rank">Update your <b>Rank</b></label>
-                        <input type="number" id="rank" name="rank" min="1" max="1000" required><br><br>
+                        <input value="9" type="number" id="rank" name="rank" min="1" max="1000" required><br><br>
                     </div>
 
                     <div class="rank-sec">
                         <div class="num">2</div>
                         <label for="percentile">Update your <b>Percentile</b></label>
-                        <input type="number" id="percentile" name="percentile" min="1" max="100" required><br><br>
+                        <input value="70" type="number" id="percentile" name="percentile" min="1" max="100" required><br><br>
                     </div>
 
                     <div class="rank-sec">
                         <div class="num">3</div>
                         <label for="correctAnswer">Update your <b>Current Score (out of 15)</b></label>
-                        <input type="number" id="correctAnswer" name="correctAnswer" min="0" max="15" required><br><br>
+                        <input value="12" type="number" id="correctAnswer" name="correctAnswer" min="0" max="15" required><br><br>
                     </div>
 
                     <div class="btn-sec">
